# ld57

./: .gitignore  .gitmodules  Button.c  CMakeLists.txt  Makefile  README.md  Texture.c  context.h  level1.txt  main.c  play  scenemanager.c
Art/: backgroundmoneyspritesheet.ase  titleimage.kra~  titleimage.png~
CSDL/: AppDelegate.h  AppDelegate.m  main.c  main.m  map.txt
CSDL.xcodeproj/: project.pbxproj
CSDL/Art/: BackgroundFishSpriteSheet.xcf  TileSpritesheet.xcf
CSDL/Base.lproj/: MainMenu.xib
CSDL/Engine/: BackgroundEntity.c  Camera.c  Entity.c  Texture.c  Texture.h  Tilemap.c  Tilemap.h  (+1 more)
Fudgie/: CMakeLists.txt  Makefile  build.sh  main.c  play
Fudgie.xcodeproj/: project.pbxproj
Fudgie/Art/: BackgroundFishSpriteSheet.xcf  CardSpritesheet.xcf  StarfishSpriteSheet.xcf  StarfishgameTileSpritesheet.xcf  TileSpritesheet.xcf  map.txt  map2.txt  map3.txt  map4.txt
Fudgie/Engine/: Button.c  Button.h  Camera.h  Entity.c  Texture.c  Texture.h  Tilemap.h  Timer.c  Timer.h  constants.h  context.h  efuncs.c  scenemanager.h
Fudgie/EngineOld/: BackgroundEntity.h  Button.c  Button.h  Entity.h  Texture.c  Texture.h  Tilemap.c  constants.h  context.h  efuncs.h
Fudgie/Scripts/: card.c  card.h  deck.c  deck.h  game.c  maingamescene.c  mainmenu.c  player.c  player.h
Resources/: level1.txt
Scripts/: game.c  maingamescene.c  mainmenu.c
Template/: Makefile  build.sh  index.data  index.html  index.js  index.wasm  main.c  map.txt  play
Template.xcodeproj/: project.pbxproj
web-build/: CMakeCache.txt  Makefile  cmake_install.cmake  index.data  index.js  index.wasm
(+23 files in other folders)
